--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <i class="fas fa-map-marker-alt"></i>
               <div>
                 <h3>Location</h3>
-                <p>Linaon Kabab, Philippines</p>
+                <p>Linaon Cauayan, Philippines</p>
               </div>
             </div>
             <div class="social-links">
