fix: update alt text for profile image for improved accessibility

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="floating-card">
           <img
             src="Profile_image/anime.jpg"
-            alt="Jojie Mae - Creative Developer"
+            alt="Jojie Mae -Anime style"
           />
         </div>
       </div>
